--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <br><br>
                             </div>
                             
-                        <div class="coll"> <h3>INTERNATIONAL CONFERENCE ON EDUCATING THE GEN Z(ICEGZ' 23)</h3></div>
+                        <div class="coll"> <h3>INTERNATIONAL CONFERENCE ON EDUCATING THE GEN Z (ICEGZ' 23)</h3></div>
                         
                         <h5><br>&nbspOrganised by<br><br>
                         <div class="seclogo"> 
@@ -139,7 +139,7 @@
 
 
                 <p>ICEGZ’23 is the pioneer edition of Saveetha Teaching Learning Centre (STLC), Saveetha Engineering College (SEC), India. This signature programme is one of the first kinds where the STLC promises to connect the academic experts, budding educators and eminent members of the teaching-learning community. This confluence is all set to explore and enhance the potential of Engineering Educators and Learners. ICEGZ aims to provide a global platform to identify best practices in teaching and applaud the evolutionary aspects involved in reaching this zenith.</p>  
-                    <p>ICEGZ consists of two key note sessions and paper presentations under two tracks, on 5th May 2023. The research articles submitted to ICEGZ will be peer-reviewed and selected for prospective publications in SCOPUS INDEXED journals. ICEGZ’22 look forward to witnessing the works of passionate educators and learners to be a part of this event.  
+                    <p>ICEGZ consists of two key note sessions and paper presentations under two tracks, on 5th May 2023. The research articles submitted to ICEGZ will be peer-reviewed and selected for prospective publications in SCOPUS INDEXED journals. ICEGZ’23 look forward to witnessing the works of passionate educators and learners to be a part of this event.  
                     </p>
 
 
@@ -172,19 +172,19 @@
                             <td>First-Year Engineering Laboratory</td>
                         </tr>
                         <tr>
-                            <td>Experiential learning</td>
+                            <td>Experiential Learning</td>
                         </tr>
                         <tr>
-                            <td>Innovative teaching tools</td>
+                            <td>Innovative Teaching Tools</td>
                         </tr>
                         <tr>
                             <td>Problem/Project Based Learning</td>
                         </tr>
                         <tr>
-                            <td>Critical thinking and Decision making in Engineering</td>
+                            <td>Critical Thinking and Decision Making in Engineering</td>
                         </tr>
                         <tr>
-                            <td>Effective Assessment of teaching-learning strategies</td>
+                            <td>Effective Assessment of Teaching-Learning Strategies</td>
                         </tr>
                         <tr>
                             <td>Evolving Engineering Pedagogy for Implementing
@@ -316,7 +316,7 @@
                     <ul class="guiderules">
                         <li>The preferred length of full paper (including footnotes) is 5,000 words (maximum limit).In general, the authors are suggested to limit the content within 5-6 pages, everything included.</li>
                         <li>The paper must include an Abstract (not more than 150 words) and 3-5 Keywords.</li>
-                        <li>Full paper must be in Times New Roman (normal style and font size 12) and in MS-Word. The page size should be A4, single column with 2.5 cm margin on both sides with single line spacing. All pages of the manuscript (including Tables and Figures) should be numbered.</li>
+                        <li>Full paper must be in Times New Roman (normal style and font size 12) and in MS-Word. The page size should be A4, double column with 2.5 cm margin on both sides with single line spacing. All pages of the manuscript (including Tables and Figures) should be numbered.</li>
                         <li>The submissions will be double-blind refereed. After this, the authors will be intimated about the further process of publication in the journal.</li>
                     </ul>
                     <p><strong class="guide">Template:</strong>&nbsp;&nbsp;&nbsp;
