--- a/index.html
+++ b/index.html
@@ -496,11 +496,12 @@
                             Ms. T. Merlin Inbamalar, Associate Professor & Head(EIE), Saveetha Engineering College<br>
                             Dr. M. Moorthi, Professor & Head(BME), Saveetha Engineering College<br>
                             Dr. N. Balaji, Professor & Head(Mech), Saveetha Engineering College<br>
-                            Dr. V. Anandan, Associate Professor & Head(Maths), Saveetha Engineering College<br>
+                            Dr. V. Anandan, Associate Professor & Head(S & H), Saveetha Engineering College<br>
                             Dr. A. Anne Dorathy, Assistant Professor (SG) & Head(English), Saveetha Engineering College<br>
                             Ms. J. Megala, Associate Professor & Head(Training), Saveetha Engineering College<br>
                             Dr. M. Priya, Professor & Head(Physics), Saveetha Engineering College<br>
                             Dr. M. Mettilda, Associate Professor & Head(Chemistry), Saveetha Engineering College<br>
+                            Ms. K. Ruth Isables, Assistant Professor & Head(Maths), Saveetha Engineering College
 
                             </p>
                         </div>
