--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <center><hr style="width: 10%; color: rgb(21, 29, 63);"></center><br>
 
 
-                <p>ICEGZ’23 is the pioneer edition of Saveetha Teaching Learning Centre (STLC), Saveetha Engineering College (SEC), India. This signature programme is one of the first kinds where the STLC promises to connect the academic experts, budding educators and eminent members of the teaching-learning community. This confluence is all set to explore and enhance the potential of Engineering Educators and Learners. ICEGZ aims to provide a global platform to identify best practices in teaching and applaud the evolutionary aspects involved in reaching this zenith.</p>  
+                <p>ICEGZ’23 is the second edition of Saveetha Teaching Learning Centre (STLC), Saveetha Engineering College (SEC), India. This signature programme organized by STLC promises to connect the academic experts, budding educators and eminent members of the teaching-learning community. This confluence is all set to explore and enhance the potential of Engineering Educators and Learners. ICEGZ aims to provide a global platform to identify best practices in teaching and applaud the evolutionary aspects involved in reaching this zenith.</p>  
                     <p>ICEGZ consists of two key note sessions and paper presentations under two tracks, on 5th May 2023. The research articles submitted to ICEGZ will be peer-reviewed and selected for prospective publications in SCOPUS INDEXED journals. ICEGZ’23 look forward to witnessing the works of passionate educators and learners to be a part of this event.  
                     </p>
 
