--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
                     After the intimation of selection, the participants need to prepare a full-length manuscript as per the following guidelines. 
                     </p>
                     <ul class="guiderules">
-                        <li>The preferred length of full paper (including footnotes) is 5,000 words (maximum limit).In general, the authors are suggested to limit the content within 5-6 pages, everything included.</li>
+                        <li>The authors are requested to submit the full-length manuscript to the page limits of 5-6 pages in the following link</li>
                         <li>The paper must include an Abstract (not more than 150 words) and 3-5 Keywords.</li>
                         <li>Full paper must be in Times New Roman (normal style and font size 12) and in MS-Word. The page size should be A4, double column with 2.5 cm margin on both sides with single line spacing. All pages of the manuscript (including Tables and Figures) should be numbered.</li>
-                        <li>The submissions will be double-blind refereed. After this, the authors will be intimated about the further process of publication in the journal.</li>
+                        <li>After the intimation of selection, the participants need to prepare a Camera Ready Copy for final submission.</li>
                     </ul>
                     <p><strong class="guide">Template:</strong>&nbsp;&nbsp;&nbsp;
                     <a class="btn btn-primary btn-sm" href="Template.docx" target="blank__"><b style="font-size: large;">Click here</b></a><br>Use this link to download the template for paper submission.<br><b style="color: red;">List of selected papers (To be updated after selection).</b></p>
