--- a/payment.html
+++ b/payment.html
@@ -60,11 +60,11 @@
             <strong>Joyal Isac S</strong><br>
             Assistant Professor, Department of EEE,<br>Saveetha Engineering College, Chennai, India.<br>
             <a href="#location" class="phone"><i class="bi bi-telephone"></i><b>&nbsp+91 996-588-2354 /  781-193-9196</b></a><br>
-            <a href="#location" class="phone"><i class="bi bi-envelope"></i> <b>&nbspstlc@saveetha.ac.in / joyalisac@saveetha.ac.in</b></a>
+            <a href="#location" class="phone"><i class="bi bi-envelope"></i> <b>&nbspselvim@saveetha.ac.in / joyalisac@saveetha.ac.in</b></a>
         </address>
     </div>       
     </div>
-    <p><strong>Copyright © SEC 2022</strong></p>
+    <p><strong>Copyright © SEC 2023</strong></p>
 </footer>
   
 </body>
