--- a/payment.html
+++ b/payment.html
@@ -41,6 +41,11 @@
                             <td>IFSC Code :</td>
                             <td>IDIB000V060</td>
                         </tr>
+                         <tr>
+                            <td>Scan for UPI Payments :</td>
+                            <td><img src="Images/Upi Qr code.jpeg" alt="saveetha logo" class="saveethalogo" border="0"></td>
+                        </tr>
+                     
         </table>
         <br><br>
         
