--- a/payment.html
+++ b/payment.html
@@ -43,7 +43,7 @@
                         </tr>
                          <tr>
                             <td>Scan for UPI Payments :</td>
-                            <td><img src="Images/Upi Qr code.jpeg" alt="saveetha logo" class="saveethalogo" border="0"></td>
+                            <td><img src="Images/Upi Qr code.jpeg" alt="upi" class="qrcode" border="0"style="object-fit: cover;"></td>
                         </tr>
                      
         </table>
