--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         <li>Full paper must be in Times New Roman (normal style and font size 12) and in MS-Word. The page size should be A4, double column with 2.5 cm margin on both sides with single line spacing. All pages of the manuscript (including Tables and Figures) should be numbered.</li>
                         <li>After the intimation of selection, the participants need to prepare a Camera Ready Copy for final submission.</li>
                     </ul>
-                     <br><center>
+                     <br><br><center>
                     <p><strong class="guide">Template:</strong>&nbsp;&nbsp;&nbsp;
                     <a class="btn btn-primary btn-sm" href="Template.docx" target="blank__"><b style="font-size: large;">Click here</b></a><br>Use this link to download the template for paper submission.<br><b style="color: red;">List of selected papers (To be updated after selection).</b></p>
                         </center></div>
