--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="Template.docx" target="blank__">Download Template</a></li>
-                                    <li><a class="dropdown-item" href="https://easychair.org/conferences/?conf=icem22" target="blank__">Easy Chair</a></li>
+                                    <li><a class="dropdown-item" href="https://easychair.org/cfp/ICEGZ-23" target="blank__">Easy Chair</a></li>
                                     <li><a class="dropdown-item" href="#journals">List of Journals</a></li>
                                     </ul>
                                 </li>
@@ -316,7 +316,7 @@
                 
               
                     <ul class="guiderules">
-                        <li>The authors are requested to submit the full-length manuscript with the page limits of 5-6 pages in the following link  <a class="btn btn-primary btn-sm" href="https://easychair.org/conferences/?conf=icem22" target="blank__"><b style="font-size: large;">Click here</b></a></li>
+                        <li>The authors are requested to submit the full-length manuscript with the page limits of 5-6 pages in the following link  <a class="btn btn-primary btn-sm" href="https://easychair.org/cfp/ICEGZ-23" target="blank__"><b style="font-size: large;">Click here</b></a></li>
                         <li>The paper must include an Abstract (not more than 150 words) and 3-5 Keywords.</li>
                         <li>Full paper must be in Times New Roman (normal style and font size 12) and in MS-Word. The page size should be A4, double column with 2.5 cm margin on both sides with single line spacing. All pages of the manuscript (including Tables and Figures) should be numbered.</li>
                         <li>After the intimation of selection, the participants need to prepare a Camera Ready Copy for final submission.</li>
